# video-analytics-platform

./: .gitignore  CMakeLists.txt  video_analytics.db
apps/desktop-client/: CMakeLists.txt
apps/desktop-client/qml/: Main.qml
apps/desktop-client/qml/components/: Card.qml  Separator.qml  StatusIndicator.qml  VideoPlaceholder.qml
apps/desktop-client/qml/pages/: CameraManagementPage.qml  LiveMonitoringPage.qml
apps/desktop-client/qml/style/: Colors.qml  Fonts.qml  Metrics.qml
apps/desktop-client/qml/views/: CameraDetailsPanel.qml  CameraGrid.qml  CameraListPanel.qml  CameraTile.qml  CameraView.qml
apps/desktop-client/src/: main.cpp
apps/desktop-client/src/bootstrap/: application_bootstrap.cpp  application_bootstrap.hpp
apps/desktop-client/src/models/: camera_list_model.cpp  camera_list_model.hpp
apps/desktop-client/src/providers/: video_frame_provider.cpp  video_frame_provider.hpp
apps/desktop-client/src/viewmodels/: camera_item_view_model.cpp  camera_item_view_model.hpp  camera_management_view_model.cpp  camera_management_view_model.hpp  camera_stream_view_model.cpp  camera_stream_view_model.hpp  camera_view_model.cpp  camera_view_model.hpp  live_monitoring_view_model.cpp  live_monitoring_view_model.hpp
modules/camera/: CMakeLists.txt
modules/camera/include/vap/camera/: camera.hpp  camera_config.hpp  i_camera_service.hpp  mock_camera_service.hpp
modules/camera/include/vap/camera/repositories/: i_camera_repository.hpp  in_memory_camera_repository.hpp  sqlite_camera_repository.hpp
modules/camera/include/vap/camera/services/: camera_application_service.hpp  i_camera_application_service.hpp
modules/camera/include/vap/camera/validation/: camera_validation.hpp  camera_validator.hpp  i_camera_validator.hpp
modules/camera/src/: mock_camera_service.cpp
modules/camera/src/repositories/: in_memory_camera_repository.cpp  sqlite_camera_repository.cpp
modules/camera/src/services/: camera_application_service.cpp
modules/camera/src/validation/: camera_validator.cpp
modules/common/: CMakeLists.txt
modules/common/include/vap/common/: connection_state.hpp  stream_state.hpp
modules/database/: CMakeLists.txt
modules/database/include/vap/database/: database.hpp
modules/database/src/: database.cpp
modules/streaming/: CMakeLists.txt
modules/streaming/include/vap/streaming/: logging.hpp  reconnect_policy.hpp  streaming_exit_reason.hpp
modules/streaming/include/vap/streaming/frame/: ffmpeg_frame_converter.hpp  i_frame_converter.hpp
modules/streaming/include/vap/streaming/manager/: streaming_manager.hpp
modules/streaming/include/vap/streaming/reconnect/: reconnect_policy.hpp
modules/streaming/include/vap/streaming/services/: i_streaming_service.hpp  mock_streaming_service.hpp
modules/streaming/include/vap/streaming/services/ffmpeg/: ffmpeg_streaming_service.hpp
modules/streaming/include/vap/streaming/session/: streaming_session.hpp
modules/streaming/include/vap/streaming/worker/: streaming_worker.hpp
modules/streaming/src/frame/: ffmpeg_frame_converter.cpp
modules/streaming/src/manager/: streaming_manager.cpp
modules/streaming/src/reconnect/: reconnect_policy.cpp
modules/streaming/src/services/: mock_streaming_service.cpp
modules/streaming/src/services/ffmpeg/: ffmpeg_streaming_service.cpp
modules/streaming/src/session/: streaming_session.cpp
modules/streaming/src/worker/: streaming_worker.cpp
tests/camera/: CMakeLists.txt  camera_validator_test.cpp  sqlite_camera_repository_test.cpp
